--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "erlpack": "github:discord/erlpack",
     "sodium": "^3.0.2",
     "utf-8-validate": "^5.0.4"
-  }
+  },
+  "engines": { "node": "14.x" }
 }
