--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "erlpack": "github:discord/erlpack",
+    "express": "^4.17.1",
+    "node-cmd": "^4.0.0",
     "sodium": "^3.0.2",
     "utf-8-validate": "^5.0.4"
   },
-  "engines": { "node": "14.x" }
+  "engines": {
+    "node": "14.x"
+  }
 }
